--- a/puhelinluettelo/src/index.css
+++ b/puhelinluettelo/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.success {
+  background: green;
+  border-style: solid;
+  padding: 10px;
 }
